# AgentGuard

./: .env.example  .gitignore  README.md  STARTUP_GUIDE.md  docker-compose.yml  test-non-stream.py
backend/: check-json-storage.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.js  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.ts  server.ts
backend/src/common/exceptions/: business.exception.ts
backend/src/common/middleware/: auth.middleware.ts  error.middleware.ts  jwt-auth.middleware.ts  policy.middleware.ts
backend/src/common/types/: pagination.types.ts
backend/src/common/utils/: api-key.util.ts  data-masking.util.ts  date.util.ts  encryption.util.ts  (+4 more)
frontend/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/api/: agent.ts  alert.ts  approval.ts  auth.ts  log.ts  policy.ts  settings.ts  stats.ts
frontend/src/components/: CodeBlock.vue  TagsBar.vue
frontend/src/layouts/: DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: agent.ts  tags.ts  user.ts
frontend/src/types/: agent.d.ts  alert.d.ts  api.d.ts  approval.d.ts  log.d.ts  policy.d.ts  stats.d.ts  tags.d.ts  user.d.ts
frontend/src/utils/: request.ts
sdk/python/: INSTALL.md  MIGRATION.md  README.md  pyproject.toml
sdk/python/agentguard/: __init__.py  api_interceptor.py  client.py
sdk/python/agentguard_zhx/: __init__.py  api_interceptor.py  approvals.py  client.py  tools.py
sdk/python/examples/: agent_example.py  test_sdk.py
(+62 files in other folders)
