[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.0"
description = "AgentGuard Python SDK - AI Agent 治理与监控"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AgentGuard Team"}
]
keywords = ["ai", "agent", "governance", "monitoring", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/agentguard"
Documentation = "https://github.com/yourusername/agentguard#readme"
Repository = "https://github.com/yourusername/agentguard"
